Added more matrices for preconditioner test

--- a/CoreFlows/examples/C/CMakeLists.txt
+++ b/CoreFlows/examples/C/CMakeLists.txt
@@ -202,5 +202,5 @@ if( SOLVERLAB_WITH_MPI )#Tests parallèles
 
 endif( SOLVERLAB_WITH_MPI )
 
-add_subdirectory (PETSc)
+add_subdirectory (SaddlePointPreconditioner)
 
