Added parallel python tests fot diffusion equation

--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -183,6 +183,10 @@ if( SOLVERLAB_WITH_MPI )
     set_property (TEST MPI4PY_2Procs PROPERTY LABELS "Python mpi 2Proc")     
   add_test(NAME StationaryDiffusion_TwoIndependentSimulations_2Procs COMMAND "${MPIEXEC}" "-n" "2" "${PYTHON_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}/MPI4PY/testTwoSimulations.py")     
     set_property (TEST StationaryDiffusion_TwoIndependentSimulations_2Procs PROPERTY LABELS "Python mpi 2Proc stationary diffusion")     
+  add_test(NAME StationaryDiffusion_2D_FE_SQUARE_MPI_2Procs COMMAND "${MPIEXEC}" "-n" "2" "${PYTHON_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}/MPI4PY/StationaryDiffusionEquation_2D_FE_SQUARE_MPI.py")     
+    set_property (TEST StationaryDiffusion_2D_FE_SQUARE_MPI_2Procs PROPERTY LABELS "Python mpi 2Proc stationary diffusion")     
+  add_test(NAME Diffusion_2D_FE_SQUARE_MPI_2Procs COMMAND "${MPIEXEC}" "-n" "2" "${PYTHON_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}/MPI4PY/DiffusionEquation_2D_FE_SQUARE_MPI.py")     
+    set_property (TEST Diffusion_2D_FE_SQUARE_MPI_2Procs PROPERTY LABELS "Python mpi 2Proc diffusion")     
   add_test(NAME SendRecvMEDCouplingFieldSameMesh_2Procs              COMMAND "${MPIEXEC}" "-n" "2" "${PYTHON_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}/MPI4PY/testSendRecvFieldSameMesh.py")     
     set_property (TEST SendRecvMEDCouplingFieldSameMesh_2Procs PROPERTY LABELS "Python mpi 2Proc medcoupling")     
   add_test(NAME SendRecvMEDCouplingFieldDifferentMeshes_2Procs       COMMAND "${MPIEXEC}" "-n" "2" "${PYTHON_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}/MPI4PY/testSendRecvFieldDifferentMeshes.py")     
