Added test of sinusoidal bump

--- a/CoreFlows/examples/CMakeLists.txt
+++ b/CoreFlows/examples/CMakeLists.txt
@@ -7,6 +7,7 @@ file(COPY resources DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
     FILE_PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
 )
 
+SET(COREFLOWS_MESHES  ${CMAKE_CURRENT_SOURCE_DIR}/resources  )
 
 add_subdirectory (C)
 
