--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -59,7 +59,17 @@ CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_1DChannelGravity_up
 CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_1DChannelGravity_Incompressible.py "Python fv isothermalsinglephase 1D gravity implicit pstaggered inlet outlet structured coreflows")
 CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_1DChannelGravity_Incompressible_Wall.py "Python fv isothermalsinglephase 1D gravity implicit pstaggered wall structured coreflows")
 CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_2DLidDrivenCavity.py  "Python fv isothermalsinglephase 2D viscosity implicit pstaggered wall structured coreflows")
-CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_2DPoiseuilleFlow.py  "Python fv isothermalsinglephase 2D viscosity implicit pstaggered wall neumann structured coreflows")
+CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_2DPoiseuilleFlow_Incompressible.py  "Python fv isothermalsinglephase 2D viscosity implicit pstaggered wall neumann structured coreflows")
+SET(MESH_FILE ${COREFLOWS_MESHES}/SinusoidalBump/bump_40x10_hexaedre.med )
+SET(MESH_NAME SinusoidalBump_Hexa )
+SET(SCHEME upwind)
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit upwind hexa wall neumann structured coreflows")
+SET(MESH_FILE ${COREFLOWS_MESHES}/SinusoidalBump/bump_40x10_triangle.med )
+SET(MESH_NAME SinusoidalBump_Triangles )
+SET(SCHEME upwind)
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit upwind triangles wall neumann unstructured coreflows")
 
 CreatePythonTest(SinglePhase/SinglePhase_1DDepressurisation.py "Python fv singlephase 1D depressurisation structured coreflows")
 CreatePythonTest(SinglePhase/SinglePhase_1DHeatedAssembly.py "Python fv singlephase 1D heating structured coreflows")
