Added more tests of sinusoidal bump

--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -63,13 +63,25 @@ CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_2DPoiseuilleFlow_In
 SET(MESH_FILE ${COREFLOWS_MESHES}/SinusoidalBump/bump_40x10_hexaedre.med )
 SET(MESH_NAME SinusoidalBump_Hexa )
 SET(SCHEME upwind)
-add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
-  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit upwind hexa wall neumann structured coreflows")
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_upwind ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_upwind PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit upwind hexa wall neumann structured coreflows")
+SET(SCHEME centered)
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_centered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_centered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit centered hexa wall neumann structured coreflows")
+SET(SCHEME staggered)
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_staggered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_staggered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit staggered hexa wall neumann structured coreflows")
 SET(MESH_FILE ${COREFLOWS_MESHES}/SinusoidalBump/bump_40x10_triangle.med )
 SET(MESH_NAME SinusoidalBump_Triangles )
 SET(SCHEME upwind)
-add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
-  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit upwind triangles wall neumann unstructured coreflows")
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_upwind ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_upwind PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit upwind triangles wall neumann unstructured coreflows")
+SET(SCHEME centered)
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_centered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_centered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit centered triangles wall neumann structured coreflows")
+SET(SCHEME staggered)
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_staggered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_staggered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit staggered triangles wall neumann structured coreflows")
 
 CreatePythonTest(SinglePhase/SinglePhase_1DDepressurisation.py "Python fv singlephase 1D depressurisation structured coreflows")
 CreatePythonTest(SinglePhase/SinglePhase_1DHeatedAssembly.py "Python fv singlephase 1D heating structured coreflows")
