Added tests for sinusoidal bump and backward facing geometry (compressible and incompressible)

--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -60,28 +60,71 @@ CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_1DChannelGravity_In
 CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_1DChannelGravity_Incompressible_Wall.py "Python fv isothermalsinglephase 1D gravity implicit pstaggered wall structured coreflows")
 CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_2DLidDrivenCavity.py  "Python fv isothermalsinglephase 2D viscosity implicit pstaggered wall structured coreflows")
 CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_2DPoiseuilleFlow_Incompressible.py  "Python fv isothermalsinglephase 2D viscosity implicit pstaggered wall neumann structured coreflows")
+
+set(INCOMPRESSIBLE 0)
+set(COMPRESSIBLE 1)
 SET(MESH_FILE ${COREFLOWS_MESHES}/SinusoidalBump/bump_40x10_hexaedre.med )
 SET(MESH_NAME SinusoidalBump_Hexa )
 SET(SCHEME upwind)
-add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_upwind ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_upwind ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${COMPRESSIBLE})
   set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_upwind PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit upwind hexa wall neumann structured coreflows")
 SET(SCHEME centered)
-add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_centered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
-  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_centered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit centered hexa wall neumann structured coreflows")
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_centered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${COMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_centered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit centered hexa compressible wall neumann structured coreflows")
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Incompressible_centered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${INCOMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Hexa_Incompressible_centered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit centered hexa wall neumann incompressible structured coreflows")
 SET(SCHEME staggered)
-add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_staggered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
-  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_staggered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit staggered hexa wall neumann structured coreflows")
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_staggered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${COMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Hexa_Compressible_staggered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit staggered hexa compressible wall neumann structured coreflows")
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Hexa_Incompressible_staggered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${INCOMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Hexa_Incompressible_staggered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit staggered hexa incompressible wall neumann structured coreflows")
 SET(MESH_FILE ${COREFLOWS_MESHES}/SinusoidalBump/bump_40x10_triangle.med )
 SET(MESH_NAME SinusoidalBump_Triangles )
 SET(SCHEME upwind)
-add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_upwind ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
-  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_upwind PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit upwind triangles wall neumann unstructured coreflows")
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_upwind ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${COMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_upwind PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit upwind triangles compressible wall neumann unstructured coreflows")
 SET(SCHEME centered)
-add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_centered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
-  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_centered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit centered triangles wall neumann structured coreflows")
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_centered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${COMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_centered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit centered triangles compressible wall neumann structured coreflows")
+SET(SCHEME centered)
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Incompressible_centered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${INCOMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Incompressible_centered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit centered triangles incompressible wall neumann structured coreflows")
 SET(SCHEME staggered)
-add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_staggered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} )
-  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_staggered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit staggered triangles wall neumann structured coreflows")
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_staggered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${COMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Compressible_staggered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit staggered triangles compressible wall neumann structured coreflows")
+add_test(IsothermalSinglePhase_2DSinusoidalBump_Triangles_Incompressible_staggered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${INCOMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DSinusoidalBump_Triangles_Incompressible_staggered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit staggered triangles incompressible wall neumann structured coreflows")
+
+SET(MESH_FILE ${COREFLOWS_MESHES}/BackwardFacingStep/backward_facing_step_hexaedra.med )
+SET(MESH_NAME BackwardStep_Hexa )
+SET(SCHEME upwind)
+add_test(IsothermalSinglePhase_2DBackwardStep_Hexa_Compressible_upwind ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${COMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DBackwardStep_Hexa_Compressible_upwind PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit upwind hexa compressible wall neumann structured coreflows")
+SET(SCHEME centered)
+add_test(IsothermalSinglePhase_2DBackwardStep_Hexa_Compressible_centered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${COMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DBackwardStep_Hexa_Compressible_centered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit centered hexa compressible wall neumann structured coreflows")
+add_test(IsothermalSinglePhase_2DBackwardStep_Hexa_Incompressible_centered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${INCOMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DBackwardStep_Hexa_Incompressible_centered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit centered hexa incompressible wall neumann structured coreflows")
+SET(SCHEME staggered)
+add_test(IsothermalSinglePhase_2DBackwardStep_Hexa_Compressible_staggered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${COMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DBackwardStep_Hexa_Compressible_staggered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit staggered hexa compressible wall neumann structured coreflows")
+add_test(IsothermalSinglePhase_2DBackwardStep_Hexa_Incompressible_staggered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${INCOMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DBackwardStep_Hexa_Incompressible_staggered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit staggered hexa incompressible wall neumann structured coreflows")
+SET(MESH_FILE ${COREFLOWS_MESHES}/BackwardFacingStep/backward_facing_step_triangles.med )
+SET(MESH_NAME BackwardStep_Triangles )
+SET(SCHEME upwind)
+add_test(IsothermalSinglePhase_2DBackwardStep_Triangles_Compressible_upwind ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${COMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DBackwardStep_Triangles_Compressible_upwind PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit upwind hexa compressible wall neumann structured coreflows")
+SET(SCHEME centered)
+add_test(IsothermalSinglePhase_2DBackwardStep_Triangles_Incompressible_centered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${INCOMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DBackwardStep_Triangles_Incompressible_centered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit centered hexa incompressible wall neumann structured coreflows")
+add_test(IsothermalSinglePhase_2DBackwardStep_Triangles_Compressible_centered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${COMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DBackwardStep_Triangles_Compressible_centered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit centered hexa wall neumann structured coreflows")
+SET(SCHEME staggered)
+add_test(IsothermalSinglePhase_2DBackwardStep_Triangles_Compressible_staggered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${COMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DBackwardStep_Triangles_Compressible_staggered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit staggered hexa compressible wall neumann structured coreflows")
+add_test(IsothermalSinglePhase_2DBackwardStep_Triangles_Incompressible_staggered ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/IsothermalSinglePhase/IsothermalSinglePhase_2DChannel_Compressible.py ${MESH_FILE} ${MESH_NAME} ${SCHEME} ${INCOMPRESSIBLE} )
+  set_property (TEST IsothermalSinglePhase_2DBackwardStep_Triangles_Incompressible_staggered PROPERTY LABELS  "Python fv isothermalsinglephase 2D bump implicit staggered hexa incompressible wall neumann structured coreflows")
 
 CreatePythonTest(SinglePhase/SinglePhase_1DDepressurisation.py "Python fv singlephase 1D depressurisation structured coreflows")
 CreatePythonTest(SinglePhase/SinglePhase_1DHeatedAssembly.py "Python fv singlephase 1D heating structured coreflows")
