ajout fichier wave stagg

--- a/CoreFlows/Models/src/CMakeLists.txt
+++ b/CoreFlows/Models/src/CMakeLists.txt
@@ -12,6 +12,7 @@ SET(src_models_CXX
     IsothermalTwoFluid.cxx
     IsothermalSinglePhase.cxx
     SinglePhase.cxx
+    WaveStaggered.cxx
     FiveEqsTwoFluid.cxx
     ProblemCoreFlows.cxx
     TransportEquation.cxx
